Add refacto deployment

--- a/www/site.conf
+++ b/www/site.conf
@@ -19,5 +19,17 @@ server {
 		internal;
 	}
 
+	location /retro/ {
+		access_log off;
+		expires max;
+		return 301 https://retro.((DOMAIN))$request_uri;
+	}
+
+	location /retros/ {
+		access_log off;
+		expires max;
+		return 301 https://retro.((DOMAIN))$request_uri;
+	}
+
 	error_page 404 /errors/404.htm;
 }
