--- a/refacto/site.conf
+++ b/refacto/site.conf
@@ -1,9 +1,14 @@
 upstream refacto_backend {
+	server 127.0.0.1:4080 max_conns=64;
+	server 127.0.0.1:4081 max_conns=64;
+	keepalive 16;
+}
+
+upstream refacto_backend_ws {
 	hash $request_uri consistent;
 
 	server 127.0.0.1:4080 max_conns=1024;
 	server 127.0.0.1:4081 max_conns=1024;
-	keepalive 16;
 }
 
 map $http_upgrade $connection_upgrade {
@@ -28,6 +33,15 @@ server {
 
 	location / {
 		proxy_pass http://refacto_backend;
+		proxy_http_version 1.1;
+		proxy_redirect off;
+		proxy_buffering off;
+		proxy_connect_timeout 5s;
+		proxy_read_timeout 10s;
+	}
+
+	location /api/retros/ {
+		proxy_pass http://refacto_backend_ws;
 		proxy_http_version 1.1;
 		proxy_set_header Upgrade $http_upgrade;
 		proxy_set_header Connection $connection_upgrade;
