--- a/refacto/site.conf
+++ b/refacto/site.conf
@@ -38,6 +38,12 @@ server {
 		proxy_buffering off;
 		proxy_connect_timeout 5s;
 		proxy_read_timeout 10s;
+
+		proxy_set_header X-Forwarded-For $remote_addr;
+		proxy_set_header X-Forwarded-Host $host:$server_port;
+		proxy_set_header X-Forwarded-Server $host;
+		proxy_set_header X-Forwarded-Port $server_port;
+		proxy_set_header X-Forwarded-Proto https;
 	}
 
 	location /api/retros/ {
@@ -49,6 +55,12 @@ server {
 		proxy_buffering off;
 		proxy_connect_timeout 5s;
 		proxy_read_timeout 60s;
+
+		proxy_set_header X-Forwarded-For $remote_addr;
+		proxy_set_header X-Forwarded-Host $host:$server_port;
+		proxy_set_header X-Forwarded-Server $host;
+		proxy_set_header X-Forwarded-Port $server_port;
+		proxy_set_header X-Forwarded-Proto https;
 	}
 }
 
