Fix mistakes in refacto setup

--- a/refacto/site.conf
+++ b/refacto/site.conf
@@ -40,13 +40,13 @@ server {
 		proxy_read_timeout 10s;
 
 		proxy_set_header X-Forwarded-For $remote_addr;
-		proxy_set_header X-Forwarded-Host $host:$server_port;
+		proxy_set_header X-Forwarded-Host $host:443;
 		proxy_set_header X-Forwarded-Server $host;
-		proxy_set_header X-Forwarded-Port $server_port;
+		proxy_set_header X-Forwarded-Port 443;
 		proxy_set_header X-Forwarded-Proto https;
 	}
 
-	location /api/retros/ {
+	location /api/retros {
 		proxy_pass http://refacto_backend_ws;
 		proxy_http_version 1.1;
 		proxy_set_header Upgrade $http_upgrade;
@@ -57,9 +57,9 @@ server {
 		proxy_read_timeout 60s;
 
 		proxy_set_header X-Forwarded-For $remote_addr;
-		proxy_set_header X-Forwarded-Host $host:$server_port;
+		proxy_set_header X-Forwarded-Host $host:443;
 		proxy_set_header X-Forwarded-Server $host;
-		proxy_set_header X-Forwarded-Port $server_port;
+		proxy_set_header X-Forwarded-Port 443;
 		proxy_set_header X-Forwarded-Proto https;
 	}
 }
