Add gitlab config for refacto

--- a/env/refacto.template.env
+++ b/env/refacto.template.env
@@ -5,4 +5,5 @@ DB_URL=mongodb://localhost:27017/refacto
 SSO_GOOGLE_CLIENT_ID=
 SSO_GITHUB_CLIENT_ID=
 SSO_GITHUB_CLIENT_SECRET=
+SSO_GITLAB_CLIENT_ID=
 GIPHY_API_KEY=
