Add standards-compliant Forwarded header

--- a/refacto/site.conf
+++ b/refacto/site.conf
@@ -16,6 +16,12 @@ map $http_upgrade $connection_upgrade {
 	'' close;
 }
 
+map $remote_addr $proxy_forwarded_for {
+	~^[0-9.]+$        "$remote_addr";
+	~^[0-9A-Fa-f:.]+$ "\"[$remote_addr]\"";
+	default           "unknown";
+}
+
 server {
 	server_name retro.((DOMAIN));
 	listen 8443 ssl http2;
@@ -41,6 +47,8 @@ server {
 		proxy_connect_timeout 5s;
 		proxy_read_timeout 10s;
 
+		proxy_set_header Forwarded "for=$proxy_forwarded_for;host=$host:443;proto=https";
+		proxy_set_header X-Real-IP "";
 		proxy_set_header X-Forwarded-For $remote_addr;
 		proxy_set_header X-Forwarded-Host $host:443;
 		proxy_set_header X-Forwarded-Server $host;
@@ -58,6 +66,8 @@ server {
 		proxy_connect_timeout 5s;
 		proxy_read_timeout 60s;
 
+		proxy_set_header Forwarded "for=$proxy_forwarded_for;host=$host:443;proto=https";
+		proxy_set_header X-Real-IP "";
 		proxy_set_header X-Forwarded-For $remote_addr;
 		proxy_set_header X-Forwarded-Host $host:443;
 		proxy_set_header X-Forwarded-Server $host;
