--- a/www/site.conf
+++ b/www/site.conf
@@ -15,6 +15,12 @@ server {
 	gzip_comp_level 4;
 	gzip_types *;
 
+	add_header Content-Security-Policy "base-uri 'self'; default-src 'none'; img-src 'self'; style-src 'self'; form-action 'none'; frame-ancestors 'none'" always;
+	add_header Referrer-Policy "no-referrer" always;
+	add_header X-Content-Type-Options "nosniff" always;
+	add_header X-Frame-Options "DENY" always;
+	add_header X-XSS-Protection "1; mode=block" always;
+
 	location /errors/ {
 		internal;
 	}
