Add X-Clacks-Overhead header

--- a/www/site.conf
+++ b/www/site.conf
@@ -21,6 +21,9 @@ server {
 	add_header X-Frame-Options "DENY" always;
 	add_header X-XSS-Protection "1; mode=block" always;
 
+	# https://xclacksoverhead.org/home/about
+	add_header X-Clacks-Overhead "GNU Terry Pratchett" always;
+
 	location /errors/ {
 		internal;
 	}
