Reduce impact of web crawlers, block raw-IP access

--- a/proxy/config/http.conf
+++ b/proxy/config/http.conf
@@ -1,6 +1,7 @@
 server {
-	listen 8000 default_server;
-	listen [::]:8000 default_server;
+	server_name .((DOMAIN));
+	listen 8000;
+	listen [::]:8000;
 	root /var/www/http;
 
 	keepalive_requests 1;
