--- a/www/site.conf
+++ b/www/site.conf
@@ -5,6 +5,14 @@ server {
 	root /var/www/https;
 	include /etc/nginx/sites-available/shared-ssl.inc;
 
+	if ($block) { # set in badagents.conf
+		return 444;
+	}
+
+	location ~(\.php$|^/wp-|^/\.git) { # ignore bulk of drive-by hack attempts
+		return 444;
+	}
+
 	index index.htm index.html;
 
 	client_header_timeout 5s;
