--- a/proxy/config/nginx.conf
+++ b/proxy/config/nginx.conf
@@ -17,7 +17,13 @@ http {
 	include /etc/nginx/mime.types;
 	default_type application/octet-stream;
 
-	access_log /var/log/nginx/access.log;
+	map $status $notrejected {
+		default 1;
+		'444' 0;
+	}
+
+	# log rotation configured in /etc/logrotate.d/nginx
+	access_log /var/log/nginx/access.log combined if=$notrejected;
 	error_log /var/log/nginx/error.log;
 
 	include /etc/nginx/conf.d/*.conf;
