--- a/refacto/site.conf
+++ b/refacto/site.conf
@@ -28,6 +28,10 @@ server {
 	listen [::]:8443 ssl http2;
 	include /etc/nginx/sites-available/shared-ssl.inc;
 
+	if ($block) { # set in badagents.conf
+		return 444;
+	}
+
 	http2_push_preload on;
 
 	client_header_timeout 5s;
@@ -80,6 +84,11 @@ server {
 	server_name retros.((DOMAIN)) refacto.((DOMAIN));
 	listen 8443 ssl http2;
 	listen [::]:8443 ssl http2;
+	include /etc/nginx/sites-available/shared-ssl.inc;
+
+	if ($block) { # set in badagents.conf
+		return 444;
+	}
 
 	keepalive_requests 1;
 	keepalive_timeout 0s;
