List more badly behaved bots, improve DNS check for certificate provisioning

--- a/proxy/config/badagents.conf
+++ b/proxy/config/badagents.conf
@@ -9,4 +9,8 @@ map $http_user_agent $block {
   ~*ioncrawl 1;
   ~*bytedance 1;
   ~*bytespider 1;
+  ~*censysinspect 1;
+  ~*t3versionsbot 1;
+  ~*ev-crawler 1;
+  '~*palo alto networks company' 1;
 }
