Enable tls1.2, block more hacker/spammer nonsense on main domain

--- a/www/site.conf
+++ b/www/site.conf
@@ -9,7 +9,7 @@ server {
 		return 444;
 	}
 
-	location ~(\.php$|^/wp-|^/\.git) { # ignore bulk of drive-by hack attempts
+	location ~(/(\.[^w]|_|wp-)|\.(php|ini)(\?|$)|golem\.com) { # ignore bulk of drive-by hack attempts
 		return 444;
 	}
 
