Add standard files (sitemap, humans) to root site, ignore more hack attempts

--- a/www/site.conf
+++ b/www/site.conf
@@ -9,7 +9,8 @@ server {
 		return 444;
 	}
 
-	location ~(/(\.[^w]|_|wp-)|\.(php|ini)(\?|$)|golem\.com) { # ignore bulk of drive-by hack attempts
+	location ~ /(?:\.[^w]|_|wp-|php$)|^/(?:backup|b[ck]|home|main|new|old|wordpress|wp|debug|admin)(?:[/?]|$)|\.(?:php\d?|ini)(?:\?|$)|golem\.com {
+		# ignore bulk of drive-by hack attempts
 		return 444;
 	}
 
@@ -35,6 +36,10 @@ server {
 
 	# https://xclacksoverhead.org/home/about
 	add_header X-Clacks-Overhead "GNU Terry Pratchett" always;
+
+	location /security.txt { # old standardised location for security.txt
+		return 301 /.well-known/security.txt;
+	}
 
 	location /errors/ {
 		internal;
