Fix redirect path

--- a/www/site.conf
+++ b/www/site.conf
@@ -38,6 +38,7 @@ server {
 	add_header X-Clacks-Overhead "GNU Terry Pratchett" always;
 
 	location /security.txt { # old standardised location for security.txt
+		absolute_redirect off;
 		return 301 /.well-known/security.txt;
 	}
 
