--- a/proxy/config/custom.conf
+++ b/proxy/config/custom.conf
@@ -1,3 +1,11 @@
 server_tokens off;
-resolver 8.8.8.8 8.8.4.4 valid=300s;
+sendfile on;
+tcp_nopush on;
+tcp_nodelay on;
+keepalive_timeout 65;
+
+# use AWS internal DNS, with Cloudflare as fallback
+resolver 172.16.0.23 1.1.1.1 valid=300s;
 resolver_timeout 5s;
+
+include /etc/nginx/sites-enabled/*;
