--- a/proxy/config/nohost.conf
+++ b/proxy/config/nohost.conf
@@ -4,8 +4,8 @@ server {
 
 	listen 8000 default_server;
 	listen [::]:8000 default_server;
-	listen 8443 ssl default_server;
-	listen [::]:8443 ssl default_server;
+	listen 8443 ssl http2 default_server;
+	listen [::]:8443 ssl http2 default_server;
 
 	# ssl cert required to function, but will have mismatched host info so regular clients will reject it anyway
 	include /etc/nginx/sites-available/shared-ssl.inc;
