--- a/proxy/config/nohost.conf
+++ b/proxy/config/nohost.conf
@@ -7,8 +7,7 @@ server {
 	listen 8443 ssl http2 default_server;
 	listen [::]:8443 ssl http2 default_server;
 
-	# ssl cert required to function, but will have mismatched host info so regular clients will reject it anyway
-	include /etc/nginx/sites-available/shared-ssl.inc;
+	ssl_reject_handshake on;
 
 	access_log off;
 	return 444; # nginx special code: close without response
