Pre-compress resources for main website

--- a/www/site.conf
+++ b/www/site.conf
@@ -20,9 +20,7 @@ server {
 	client_body_timeout 5s;
 	client_max_body_size 1;
 
-	gzip on;
-	gzip_comp_level 4;
-	gzip_types *;
+	gzip_static on;
 
 	add_header Content-Security-Policy "base-uri 'self'; default-src 'none'; img-src 'self'; style-src 'self'; form-action 'none'; frame-ancestors 'none'" always;
 	add_header Cross-Origin-Embedder-Policy "require-corp" always;
