--- a/proxy/config/custom.conf
+++ b/proxy/config/custom.conf
@@ -4,6 +4,7 @@ tcp_nopush on;
 tcp_nodelay on;
 keepalive_timeout 65;
 
-# use AWS internal DNS, with Cloudflare as fallback
-resolver 172.16.0.23 1.1.1.1 valid=300s;
+# use local DNS, with Cloudflare as fallback
+# AWS provides 172.16.0.23 / fd00:ec2::253, but we don't know if we're on an IPv4 or IPv6 network here
+resolver 172.0.0.53 1.1.1.1 valid=300s;
 resolver_timeout 5s;
