Adjust nginx timeouts and config scope

--- a/proxy/config/nohost.conf
+++ b/proxy/config/nohost.conf
@@ -10,5 +10,6 @@ server {
 	ssl_reject_handshake on;
 
 	access_log off;
+	lingering_close off;
 	return 444; # nginx special code: close without response
 }
