--- a/www/site.conf
+++ b/www/site.conf
@@ -14,15 +14,11 @@ server {
 	}
 
 	location ~ /(?:\.[^w]|_|wp-|php$)|^/(?:backup|b[ck]|home|main|new|old|wordpress|wp|debug|admin|about|server-status|telescope|path_sql|config\.json|ecp)(?:[/?]|$)|\.(?:php\d?|ini|action)(?:\?|$)|golem\.com|rest_route {
+		lingering_close off;
 		return 444;
 	}
 
-	index index.htm index.html;
-
-	client_header_timeout 5s;
-	client_body_timeout 5s;
-	client_max_body_size 1;
-	absolute_redirect off; # nginx thinks it is on port 8443, so absolute redirects won't work
+	index index.htm;
 
 	gzip_static on;
 
@@ -54,12 +50,14 @@ server {
 	}
 
 	location /retro/ {
+		keepalive_timeout 0s;
 		access_log off;
 		expires max;
 		return 301 https://retro.((DOMAIN))$request_uri;
 	}
 
 	location /retros/ {
+		keepalive_timeout 0s;
 		access_log off;
 		expires max;
 		return 301 https://retro.((DOMAIN))$request_uri;
