--- a/proxy/config/custom.conf
+++ b/proxy/config/custom.conf
@@ -2,9 +2,19 @@ server_tokens off;
 sendfile on;
 tcp_nopush on;
 tcp_nodelay on;
-keepalive_timeout 65;
+msie_padding off;
+reset_timedout_connection on;
+absolute_redirect off; # nginx thinks it is on port 8443, so absolute redirects won't work
 
-# use local DNS, with Cloudflare as fallback
+keepalive_timeout 65s;
+client_header_timeout 5s;
+client_body_timeout 5s;
+client_max_body_size 1;
+send_timeout 60s;
+lingering_time 5s;
+lingering_timeout 5s;
+
+# use local DNS
 # AWS provides 172.16.0.23 / fd00:ec2::253, but we don't know if we're on an IPv4 or IPv6 network here
-resolver 172.0.0.53 1.1.1.1 valid=300s;
-resolver_timeout 5s;
+resolver 172.0.0.53 valid=300s;
+resolver_timeout 10s;
