--- a/refacto/site.conf
+++ b/refacto/site.conf
@@ -32,9 +32,7 @@ server {
 		return 444;
 	}
 
-	client_header_timeout 5s;
-	client_body_timeout 5s;
-	client_max_body_size 614400;
+	client_max_body_size 600k;
 
 	access_log off;
 	error_log off;
@@ -88,18 +86,12 @@ server {
 		return 444;
 	}
 
-	keepalive_requests 1;
-	keepalive_timeout 0s;
-
-	client_header_timeout 5s;
-	client_body_timeout 5s;
-	client_max_body_size 1;
-
 	if ($request_method !~ ^(HEAD|GET)$) {
 		return 444;
 	}
 
 	location / {
+		keepalive_timeout 0s;
 		access_log off;
 		expires max;
 		return 301 https://retro.((DOMAIN))$request_uri;
