Fix 127/172 typo in nginx resolver config

--- a/proxy/config/custom.conf
+++ b/proxy/config/custom.conf
@@ -15,6 +15,5 @@ lingering_time 5s;
 lingering_timeout 5s;
 
 # use local DNS
-# AWS provides 172.16.0.23 / fd00:ec2::253, but we don't know if we're on an IPv4 or IPv6 network here
-resolver 172.0.0.53 valid=300s;
-resolver_timeout 10s;
+resolver 127.0.0.53;
+resolver_timeout 5s;
