Send large response to obvious attack attempts

--- a/www/site.conf
+++ b/www/site.conf
@@ -13,7 +13,13 @@ server {
 		return 444;
 	}
 
-	location ~ /(?:\.[^w]|_|wp-|php$)|^/(?:backup|b[ck]|home|main|new|old|wordpress|wp|debug|admin|about|server-status|telescope|path_sql|config\.json|ecp)(?:[/?]|$)|\.(?:php\d?|ini|action)(?:\?|$)|golem\.com|rest_route {
+	location ~ /admin(?:[/?]|$) {
+		# obvious hack attempt (robots.txt disallows access here, so no well-intentioned bot will reach this)
+		include /etc/nginx/sites-available/hacker.inc;
+	}
+
+	location ~ /(?:\.[^w]|_|wp-|php$)|^/(?:backup|b[ck]|home|main|new|old|wordpress|wp|debug|about|server-status|telescope|path_sql|config\.json|ecp)(?:[/?]|$)|\.(?:php\d?|ini|sql|action)(?:\?|$)|golem\.com|rest_route {
+		# likely hack attempt (but could also be a well-intentioned bot following a bad link, so don't punish them)
 		lingering_close off;
 		return 444;
 	}
