--- a/refacto/site.conf
+++ b/refacto/site.conf
@@ -35,44 +35,40 @@ server {
 	client_max_body_size 600k;
 
 	access_log off;
-	error_log off;
+	error_log /var/log/nginx/error.log crit;
 
 	merge_slashes off;
 
 	location / {
 		proxy_pass http://refacto_backend;
-		proxy_http_version 1.1;
-		proxy_redirect off;
-		proxy_buffering off;
-		proxy_connect_timeout 5s;
+		include /etc/nginx/sites-available/proxy-common.inc;
+		proxy_set_header Connection "";
+		proxy_request_buffering on;
+		proxy_buffering on;
+		proxy_send_timeout 10s;
 		proxy_read_timeout 10s;
+	}
 
-		proxy_set_header Forwarded "for=$proxy_forwarded_for;host=$host:443;proto=https";
-		proxy_set_header X-Real-IP "";
-		proxy_set_header X-Forwarded-For $remote_addr;
-		proxy_set_header X-Forwarded-Host $host:443;
-		proxy_set_header X-Forwarded-Server $host;
-		proxy_set_header X-Forwarded-Port 443;
-		proxy_set_header X-Forwarded-Proto https;
+	location /api/auth/tokens {
+		limit_req zone=auth burst=16 delay=8;
+
+		include /etc/nginx/sites-available/proxy-common.inc;
+		proxy_set_header Connection "";
+		proxy_request_buffering on;
+		proxy_buffering on;
+		proxy_send_timeout 10s;
+		proxy_read_timeout 10s;
 	}
 
 	location /api/retros {
 		proxy_pass http://refacto_backend_ws;
-		proxy_http_version 1.1;
+		include /etc/nginx/sites-available/proxy-common.inc;
 		proxy_set_header Upgrade $http_upgrade;
 		proxy_set_header Connection $connection_upgrade;
-		proxy_redirect off;
+		proxy_request_buffering off;
 		proxy_buffering off;
-		proxy_connect_timeout 5s;
+		proxy_send_timeout 60s;
 		proxy_read_timeout 60s;
-
-		proxy_set_header Forwarded "for=$proxy_forwarded_for;host=$host:443;proto=https";
-		proxy_set_header X-Real-IP "";
-		proxy_set_header X-Forwarded-For $remote_addr;
-		proxy_set_header X-Forwarded-Host $host:443;
-		proxy_set_header X-Forwarded-Server $host;
-		proxy_set_header X-Forwarded-Port 443;
-		proxy_set_header X-Forwarded-Proto https;
 	}
 }
 
