Fix for rate limit, extract shared proxy conf from refacto

--- a/refacto/site.conf
+++ b/refacto/site.conf
@@ -16,12 +16,6 @@ map $http_upgrade $connection_upgrade {
 	'' close;
 }
 
-map $remote_addr $proxy_forwarded_for {
-	~^[0-9.]+$        "$remote_addr";
-	~^[0-9A-Fa-f:.]+$ "\"[$remote_addr]\"";
-	default           "unknown";
-}
-
 server {
 	server_name retro.((DOMAIN));
 	listen 8443 ssl http2;
@@ -52,6 +46,7 @@ server {
 	location /api/auth/tokens {
 		limit_req zone=auth burst=16 delay=8;
 
+		proxy_pass http://refacto_backend;
 		include /etc/nginx/sites-available/proxy-common.inc;
 		proxy_set_header Connection "";
 		proxy_request_buffering on;
