--- a/refacto/site.conf
+++ b/refacto/site.conf
@@ -29,7 +29,7 @@ server {
 	client_max_body_size 600k;
 
 	access_log off;
-	error_log /var/log/nginx/error.log crit;
+	error_log /var/log/nginx/error.log error;
 
 	merge_slashes off;
 
