Increase scope of hacker bombs

--- a/www/site.conf
+++ b/www/site.conf
@@ -13,12 +13,12 @@ server {
 		return 444;
 	}
 
-	location ~ /admin(?:[/?]|$) {
-		# obvious hack attempt (robots.txt disallows access here, so no well-intentioned bot will reach this)
+	location ~ /\.[^w]|^/+(?:_|admin|ansible|aws|backup|b[ck]|config(?:uration)?\.|debug|django|docker|ec[ps]|elastic|env(?:ironment)?\.|kubernetes|maven|parameters\.|php|telescope|travis|wordpress|wp)|credential|secret|\.(?:key|sql|ya?ml)(?:\?|$) {
+		# obvious hack attempt
 		include /etc/nginx/sites-available/hacker.inc;
 	}
 
-	location ~ /(?:\.[^w]|_|wp-|php$)|^/(?:backup|b[ck]|home|main|new|old|wordpress|wp|debug|about|server-status|telescope|path_sql|config\.json|ecp)(?:[/?]|$)|\.(?:php\d?|ini|sql|action)(?:\?|$)|golem\.com|rest_route {
+	location ~ /(?:_|wp-|php$)|^/+(?:home|main|new|old|api|about|server-status|path_sql)(?:[/?]|$)|\.(?:php\d?|ini|action|properties)(?:\?|$)|golem\.com|rest_route {
 		# likely hack attempt (but could also be a well-intentioned bot following a bad link, so don't punish them)
 		lingering_close off;
 		return 444;
