Issue self-signed certificate until DNS is configured, auto-detect domains, support additional sites

--- a/proxy/config/ratelimit.conf
+++ b/proxy/config/ratelimit.conf
@@ -1,3 +1,4 @@
 limit_req_zone $binary_remote_addr zone=auth:10m rate=30r/m;
+limit_req_zone $server_name zone=lockdown:10m rate=6r/m;
 limit_req_log_level error;
 limit_req_status 429;
