Tweak migration script, update nginx config for latest version

--- a/refacto/site.conf
+++ b/refacto/site.conf
@@ -18,8 +18,9 @@ map $http_upgrade $connection_upgrade {
 
 server {
 	server_name retro.((DOMAIN));
-	listen 8443 ssl http2;
-	listen [::]:8443 ssl http2;
+	listen 8443 ssl;
+	listen [::]:8443 ssl;
+	http2 on;
 	include /etc/nginx/sites-available/shared-ssl.inc;
 
 	if ($block) { # set in badagents.conf
@@ -69,8 +70,9 @@ server {
 
 server {
 	server_name retros.((DOMAIN)) refacto.((DOMAIN));
-	listen 8443 ssl http2;
-	listen [::]:8443 ssl http2;
+	listen 8443 ssl;
+	listen [::]:8443 ssl;
+	http2 on;
 	include /etc/nginx/sites-available/shared-ssl.inc;
 
 	if ($block) { # set in badagents.conf
