--- a/www/site.conf
+++ b/www/site.conf
@@ -1,7 +1,8 @@
 server {
 	server_name ((DOMAIN)) www.((DOMAIN));
-	listen 8443 ssl http2;
-	listen [::]:8443 ssl http2;
+	listen 8443 ssl;
+	listen [::]:8443 ssl;
+	http2 on;
 	root /var/www/https;
 	include /etc/nginx/sites-available/shared-ssl.inc;
 
