--- a/proxy/config/nohost.conf
+++ b/proxy/config/nohost.conf
@@ -4,8 +4,9 @@ server {
 
 	listen 8000 default_server;
 	listen [::]:8000 default_server;
-	listen 8443 ssl http2 default_server;
-	listen [::]:8443 ssl http2 default_server;
+	listen 8443 ssl default_server;
+	listen [::]:8443 ssl default_server;
+	http2 on;
 
 	ssl_reject_handshake on;
 
