--- a/www/site.conf
+++ b/www/site.conf
@@ -14,7 +14,11 @@ server {
 		return 444;
 	}
 
-	location ~ /\.[^w]|^/+(?:_|admin|ansible|aws|backup|b[ck]|config(?:uration)?\.|debug|django|docker|ec[ps]|elastic|env(?:ironment)?\.|kubernetes|maven|parameters\.|php|telescope|travis|wordpress|wp)|credential|secret|\.(?:key|sql|ya?ml)(?:\?|$) {
+	location ~ ^/\.well-known/acme-challenge/[a-zA-Z0-9_\-]{5,100}$ {
+		# always allow acme challenges through (avoid risk of blocking if challenge randomly begins with _, or contains a banned word)
+	}
+
+	location ~ /\.[^w]|^/+(?:_|admin|ansible|aws|backup|b[ck]|config(?:uration)?\.|debug|django|docker|ec[ps]|elastic|env(?:ironment)?\.|kubernetes|maven|parameters\.|php|cgi-bin|telescope|travis|wordpress|wp)|credential|secret|\.(?:key|sql|ya?ml|env|bak|cgi)(?:\?|$) {
 		# obvious hack attempt
 		include /etc/nginx/sites-available/hacker.inc;
 	}
@@ -47,9 +51,17 @@ server {
 	# https://xclacksoverhead.org/home/about
 	add_header X-Clacks-Overhead "GNU Terry Pratchett" always;
 
-	location /security.txt { # old standardised location for security.txt
+	location = / {
+		# optimisation: do not check other locations when requesting root resource
+	}
+
+	location = /security.txt { # old standardised location for security.txt
 		expires max;
 		return 301 /.well-known/security.txt;
+	}
+	location = /.well-known/traffic-advice {
+		expires 30d;
+		default_type "application/trafficadvice+json; charset=utf-8";
 	}
 
 	location /errors/ {
