--- a/proxy/config/log.conf
+++ b/proxy/config/log.conf
@@ -3,6 +3,23 @@ map $status $notrejected {
   '444' 0;
 }
 
+log_format machine escape=json '{'
+  '"msec":$msec,'
+  '"host":"$host",'
+  '"client":"$remote_addr",'
+  '"cid":"$connection",'
+  '"reqNum":$connection_requests,'
+  '"req":"$request",'
+  '"reqSize":$request_length,'
+  '"ref":"$http_referer",'
+  '"ua":"$http_user_agent",'
+  '"duration":$request_time,'
+  '"status":$status,'
+  '"resSize":$bytes_sent,'
+  '"resBodySize":$body_bytes_sent,'
+  '"ext":"$custom_extra"'
+  '}';
+
 # log rotation configured in /etc/logrotate.d/nginx
-access_log /var/log/nginx/access.log combined if=$notrejected;
+access_log /var/log/nginx/access.log machine if=$notrejected;
 error_log /var/log/nginx/error.log warn;
