Use quotes in regular expressions to fix conflicting characters

--- a/www/site.conf
+++ b/www/site.conf
@@ -14,16 +14,16 @@ server {
 		return 444;
 	}
 
-	location ~ ^/\.well-known/acme-challenge/[a-zA-Z0-9_\-]{5,100}$ {
+	location ~ '^/\.well-known/acme-challenge/[a-zA-Z0-9_\-]{5,100}$' {
 		# always allow acme challenges through (avoid risk of blocking if challenge randomly begins with _, or contains a banned word)
 	}
 
-	location ~ /\.[^w]|^/+(?:_|admin|ansible|aws|backup|b[ck]|config(?:uration)?\.|debug|django|docker|ec[ps]|elastic|env(?:ironment)?\.|kubernetes|maven|parameters\.|php|cgi-bin|telescope|travis|wordpress|wp)|credential|secret|\.(?:key|sql|ya?ml|env|bak|cgi)(?:\?|$) {
+	location ~ '/\.[^w]|^/+(?:_|admin|ansible|aws|backup|b[ck]|config(?:uration)?\.|debug|django|docker|ec[ps]|elastic|env(?:ironment)?\.|kubernetes|maven|parameters\.|php|cgi-bin|telescope|travis|wordpress|wp)|credential|secret|\.(?:key|sql|ya?ml|env|bak|cgi)(?:\?|$)' {
 		# obvious hack attempt
 		include /etc/nginx/sites-available/hacker.inc;
 	}
 
-	location ~ /(?:_|wp-|php$)|^/+(?:home|main|new|old|api|about|server-status|path_sql)(?:[/?]|$)|\.(?:php\d?|ini|action|properties)(?:\?|$)|golem\.com|rest_route {
+	location ~ '/(?:_|wp-|php$)|^/+(?:home|main|new|old|api|about|server-status|path_sql)(?:[/?]|$)|\.(?:php\d?|ini|action|properties)(?:\?|$)|golem\.com|rest_route' {
 		# likely hack attempt (but could also be a well-intentioned bot following a bad link, so don't punish them)
 		lingering_close off;
 		return 444;
