--- a/proxy/config/log.conf
+++ b/proxy/config/log.conf
@@ -17,7 +17,7 @@ log_format machine escape=json '{'
   '"status":$status,'
   '"resSize":$bytes_sent,'
   '"resBodySize":$body_bytes_sent,'
-  '"ext":"$http_x_hacker"'
+  '"ext":"$custom_extra"'
   '}';
 
 # log rotation configured in /etc/logrotate.d/nginx
