Introduce crazy hack syntax to declare custom_extra variable globally

--- a/proxy/config/log.conf
+++ b/proxy/config/log.conf
@@ -3,6 +3,10 @@ map $status $notrejected {
   '444' 0;
 }
 
+# crazy syntax to declare this variable, which in reality is conditionally set by hacker.inc
+# https://trac.nginx.org/nginx/ticket/2414
+map dummy $dummy { ~(?<custom_extra>) dummy; }
+
 log_format machine escape=json '{'
   '"msec":$msec,'
   '"host":"$host",'
