Redirect www to root domain, redirect index.html requests, no need to support acme challenges on https (always use http)

--- a/www/site.conf
+++ b/www/site.conf
@@ -1,5 +1,5 @@
 server {
-	server_name ((DOMAIN)) www.((DOMAIN));
+	server_name ((DOMAIN));
 	listen 8443 ssl;
 	listen [::]:8443 ssl;
 	http2 on;
@@ -12,10 +12,6 @@ server {
 
 	if ($request_method !~ ^(HEAD|GET)$) {
 		return 444;
-	}
-
-	location ~ '^/\.well-known/acme-challenge/[a-zA-Z0-9_\-]{5,100}$' {
-		# always allow acme challenges through (avoid risk of blocking if challenge randomly begins with _, or contains a banned word)
 	}
 
 	location ~ '/\.[^w]|^/+(?:_|admin|ansible|aws|backup|b[ck]|config(?:uration)?\.|debug|django|docker|ec[ps]|elastic|env(?:ironment)?\.|kubernetes|maven|parameters\.|php|cgi-bin|telescope|travis|wordpress|wp)|credential|secret|\.(?:key|sql|ya?ml|env|bak|cgi)(?:\?|$)' {
@@ -64,6 +60,11 @@ server {
 		default_type "application/trafficadvice+json; charset=utf-8";
 	}
 
+	location ~ '^/index\.html?$' {
+		expires max;
+		return 301 /;
+	}
+
 	location /errors/ {
 		internal;
 	}
@@ -83,4 +84,50 @@ server {
 	}
 
 	error_page 404 /errors/404.htm;
+}
+
+server {
+	server_name www.((DOMAIN));
+	listen 8443 ssl;
+	listen [::]:8443 ssl;
+	http2 on;
+	include /etc/nginx/sites-available/shared-ssl.inc;
+
+	if ($block) { # set in badagents.conf
+		return 444;
+	}
+
+	if ($request_method !~ ^(HEAD|GET)$) {
+		return 444;
+	}
+
+	location / {
+		keepalive_timeout 0s;
+		access_log off;
+		expires max;
+		return 301 https://((DOMAIN))$request_uri;
+	}
+
+	# direct redirects (avoid extra hop)
+
+	location ~ '^/index\.html?$' {
+		keepalive_timeout 0s;
+		access_log off;
+		expires max;
+		return 301 https://((DOMAIN))/;
+	}
+
+	location /retro/ {
+		keepalive_timeout 0s;
+		access_log off;
+		expires max;
+		return 301 https://retro.((DOMAIN))$request_uri;
+	}
+
+	location /retros/ {
+		keepalive_timeout 0s;
+		access_log off;
+		expires max;
+		return 301 https://retro.((DOMAIN))$request_uri;
+	}
 }
