--- a/www/site.conf
+++ b/www/site.conf
@@ -14,12 +14,12 @@ server {
 		return 444;
 	}
 
-	location ~ '/\.[^w]|^/+(?:_|admin|ansible|aws|backup|b[ck]|config(?:uration)?\.|debug|django|docker|ec[ps]|elastic|env(?:ironment)?\.|kubernetes|maven|parameters\.|php|cgi-bin|telescope|travis|wordpress|wp)|credential|secret|\.(?:key|sql|ya?ml|env|bak|cgi)(?:\?|$)' {
+	location ~* '/\.[^w]|^/+(?:_|admin|login|ansible|aws|backup|b[ck]|config(?:uration)?\.|debug|django|docker|ec[ps]|elastic|env(?:ironment)?\.|kubernetes|maven|parameters\.|php|cgi-bin|telescope|travis|wordpress|wp)|credential|secret|\.(?:key|sql|ya?ml|env|bak|cgi)(?:\?|$)' {
 		# obvious hack attempt
 		include /etc/nginx/sites-available/hacker.inc;
 	}
 
-	location ~ '/(?:_|wp-|php$)|^/+(?:home|main|new|old|api|about|server-status|path_sql)(?:[/?]|$)|\.(?:php\d?|ini|action|properties)(?:\?|$)|golem\.com|rest_route' {
+	location ~* '/(?:_|wp-|php$)|^/+(?:home|main|new|old|api|about|server-status|path_sql)(?:[/?]|$)|\.(?:php\d?|ini|action|properties)(?:\?|$)|golem\.com|rest_route' {
 		# likely hack attempt (but could also be a well-intentioned bot following a bad link, so don't punish them)
 		lingering_close off;
 		return 444;
@@ -29,7 +29,7 @@ server {
 
 	gzip_static on;
 
-	location ~ \.gz$ {
+	location ~* \.gz$ {
 		# prevent direct access to static gzip files
 		return 404;
 	}
@@ -60,7 +60,7 @@ server {
 		default_type "application/trafficadvice+json; charset=utf-8";
 	}
 
-	location ~ '^/index\.html?$' {
+	location ~* '^/index\.html?$' {
 		expires max;
 		return 301 /;
 	}
@@ -110,7 +110,7 @@ server {
 
 	# direct redirects (avoid extra hop)
 
-	location ~ '^/index\.html?$' {
+	location ~* '^/index\.html?$' {
 		keepalive_timeout 0s;
 		access_log off;
 		expires max;
