Actually the index redirect which is broken

--- a/www/site.conf
+++ b/www/site.conf
@@ -1,5 +1,5 @@
 server {
-	server_name ((DOMAIN)) www.((DOMAIN));
+	server_name ((DOMAIN));
 	listen 8443 ssl;
 	listen [::]:8443 ssl;
 	http2 on;
@@ -60,10 +60,10 @@ server {
 		default_type "application/trafficadvice+json; charset=utf-8";
 	}
 
-	location ~* '^/index\.html?$' {
-		expires max;
-		return 301 /;
-	}
+	#location ~* '^/index\.html?$' {
+	#	expires max;
+	#	return 301 /;
+	#}
 
 	location /errors/ {
 		internal;
@@ -86,48 +86,48 @@ server {
 	error_page 404 /errors/404.htm;
 }
 
-#server {
-#	server_name www.((DOMAIN));
-#	listen 8443 ssl;
-#	listen [::]:8443 ssl;
-#	http2 on;
-#	include /etc/nginx/sites-available/shared-ssl.inc;
+server {
+	server_name www.((DOMAIN));
+	listen 8443 ssl;
+	listen [::]:8443 ssl;
+	http2 on;
+	include /etc/nginx/sites-available/shared-ssl.inc;
 
-#	if ($block) { # set in badagents.conf
-#		return 444;
-#	}
+	if ($block) { # set in badagents.conf
+		return 444;
+	}
 
-#	if ($request_method !~ ^(HEAD|GET)$) {
-#		return 444;
-#	}
+	if ($request_method !~ ^(HEAD|GET)$) {
+		return 444;
+	}
 
-#	location / {
-#		keepalive_timeout 0s;
-#		access_log off;
-#		expires max;
-#		return 301 https://((DOMAIN))$request_uri;
-#	}
+	location / {
+		keepalive_timeout 0s;
+		access_log off;
+		expires max;
+		return 301 https://((DOMAIN))$request_uri;
+	}
 
-#	# direct redirects (avoid extra hop)
+	# direct redirects (avoid extra hop)
 
-#	location ~* '^/index\.html?$' {
-#		keepalive_timeout 0s;
-#		access_log off;
-#		expires max;
-#		return 301 https://((DOMAIN))/;
-#	}
+	#location ~* '^/index\.html?$' {
+	#	keepalive_timeout 0s;
+	#	access_log off;
+	#	expires max;
+	#	return 301 https://((DOMAIN))/;
+	#}
 
-#	location /retro/ {
-#		keepalive_timeout 0s;
-#		access_log off;
-#		expires max;
-#		return 301 https://retro.((DOMAIN))$request_uri;
-#	}
+	location /retro/ {
+		keepalive_timeout 0s;
+		access_log off;
+		expires max;
+		return 301 https://retro.((DOMAIN))$request_uri;
+	}
 
-#	location /retros/ {
-#		keepalive_timeout 0s;
-#		access_log off;
-#		expires max;
-#		return 301 https://retro.((DOMAIN))$request_uri;
-#	}
-#}
+	location /retros/ {
+		keepalive_timeout 0s;
+		access_log off;
+		expires max;
+		return 301 https://retro.((DOMAIN))$request_uri;
+	}
+}
