Fix index redirect

--- a/www/site.conf
+++ b/www/site.conf
@@ -25,8 +25,6 @@ server {
 		return 444;
 	}
 
-	index index.htm;
-
 	gzip_static on;
 
 	location ~* \.gz$ {
@@ -48,22 +46,23 @@ server {
 	add_header X-Clacks-Overhead "GNU Terry Pratchett" always;
 
 	location = / {
-		# optimisation: do not check other locations when requesting root resource
+		try_files /index.htm =404;
+	}
+
+	location ~* '^/index\.html?$' {
+		expires max;
+		return 301 /;
 	}
 
 	location = /security.txt { # old standardised location for security.txt
 		expires max;
 		return 301 /.well-known/security.txt;
 	}
+
 	location = /.well-known/traffic-advice {
 		expires 30d;
 		default_type "application/trafficadvice+json; charset=utf-8";
 	}
-
-	#location ~* '^/index\.html?$' {
-	#	expires max;
-	#	return 301 /;
-	#}
 
 	location /errors/ {
 		internal;
@@ -92,6 +91,9 @@ server {
 	listen [::]:8443 ssl;
 	http2 on;
 	include /etc/nginx/sites-available/shared-ssl.inc;
+	keepalive_timeout 0s;
+	access_log off;
+	expires max;
 
 	if ($block) { # set in badagents.conf
 		return 444;
@@ -102,32 +104,20 @@ server {
 	}
 
 	location / {
-		keepalive_timeout 0s;
-		access_log off;
-		expires max;
 		return 301 https://((DOMAIN))$request_uri;
 	}
 
 	# direct redirects (avoid extra hop)
 
-	#location ~* '^/index\.html?$' {
-	#	keepalive_timeout 0s;
-	#	access_log off;
-	#	expires max;
-	#	return 301 https://((DOMAIN))/;
-	#}
+	location ~* '^/index\.html?$' {
+		return 301 https://((DOMAIN))/;
+	}
 
 	location /retro/ {
-		keepalive_timeout 0s;
-		access_log off;
-		expires max;
 		return 301 https://retro.((DOMAIN))$request_uri;
 	}
 
 	location /retros/ {
-		keepalive_timeout 0s;
-		access_log off;
-		expires max;
 		return 301 https://retro.((DOMAIN))$request_uri;
 	}
 }
