--- a/www/site.conf
+++ b/www/site.conf
@@ -32,15 +32,14 @@ server {
 		return 404;
 	}
 
+	# https://developer.mozilla.org/en-US/observatory/analyze?host=davidje13.com
 	add_header Content-Security-Policy "base-uri 'self'; default-src 'none'; img-src 'self'; style-src 'self'; form-action 'none'; frame-ancestors 'none'" always;
 	add_header Cross-Origin-Embedder-Policy "require-corp" always;
 	add_header Cross-Origin-Opener-Policy "same-origin" always;
 	add_header Cross-Origin-Resource-Policy "same-origin" always;
-	add_header Permissions-Policy "accelerometer=(), autoplay=(), camera=(), geolocation=(), gyroscope=(), interest-cohort=(), magnetometer=(), microphone=(), payment=(), sync-xhr=(), usb=()" always;
+	add_header Permissions-Policy "accelerometer=(), ambient-light-sensor=(), attribution-reporting=(), autoplay=(), bluetooth=(), browsing-topics=(), camera=(), captured-surface-control=(), compute-pressure=(), cross-origin-isolated=(), deferred-fetch=(), deferred-fetch-minimal=(), display-capture=(), encrypted-media=(), fullscreen=(), gamepad=(), geolocation=(), gyroscope=(), hid=(), identity-credentials-get=(), idle-detection=(), language-detector=(), local-fonts=(), magnetometer=(), microphone=(), midi=(), otp-credentials=(), payment=(), picture-in-picture=(), publickey-credentials-secret=(), publickey-credentials-get=(), screen-wake-lock=(), serial=(), speaker-selection=(), storage-access=(), summarizer=(), translator=(), usb=(), web-share=(), window-management=(), xr-spatial-tracking=()" always;
 	add_header Referrer-Policy "no-referrer" always;
 	add_header X-Content-Type-Options "nosniff" always;
-	add_header X-Frame-Options "DENY" always;
-	add_header X-XSS-Protection "1; mode=block" always;
 
 	# https://xclacksoverhead.org/home/about
 	add_header X-Clacks-Overhead "GNU Terry Pratchett" always;
