Remove unsupported options from service config, fix network dependency, make update polling quieter

--- a/refacto/refacto-updater.service
+++ b/refacto/refacto-updater.service
@@ -1,7 +1,7 @@
 [Unit]
 Description=Refacto Updater
+After=network.target
 
 [Service]
 Type=oneshot
 ExecStart=/var/www/refacto/update.sh
-After=network-online.target
