Set cache header for main site

--- a/www/site.conf
+++ b/www/site.conf
@@ -32,6 +32,8 @@ server {
 		return 404;
 	}
 
+	add_header Cache-Control "public, max-age=600, stale-if-error=31536000" always;
+
 	# https://developer.mozilla.org/en-US/observatory/analyze?host=davidje13.com
 	add_header Content-Security-Policy "base-uri 'self'; default-src 'none'; img-src 'self'; style-src 'self'; form-action 'none'; frame-ancestors 'none'" always;
 	add_header Cross-Origin-Embedder-Policy "require-corp" always;
