Add (very high) background rate limiting for all proxied content, and avoid upstream servers being marked as down

--- a/proxy/config/ratelimit.conf
+++ b/proxy/config/ratelimit.conf
@@ -1,4 +1,5 @@
-limit_req_zone $binary_remote_addr zone=auth:10m rate=30r/m;
-limit_req_zone $server_name zone=lockdown:10m rate=6r/m;
+limit_req_zone $server_name zone=background:50k rate=3000r/s; # for general proxied requests to avoid overloading the upstream connections (assuming ~128 upstream connections max, 40ms max response time)
+limit_req_zone $binary_remote_addr zone=auth:10m rate=30r/m; # for mild protection from brute-force attacks / accidental DoS
+limit_req_zone $server_name zone=lockdown:50k rate=6r/m; # for good protection from brute-force attacks
 limit_req_log_level error;
 limit_req_status 429;
