--- a/refacto/site.conf
+++ b/refacto/site.conf
@@ -1,14 +1,15 @@
 upstream refacto_backend {
-	server 127.0.0.1:4080 max_conns=64;
-	server 127.0.0.1:4081 max_conns=64;
+	server 127.0.0.1:4080 max_conns=64 fail_timeout=0 max_fails=0;
+	server 127.0.0.1:4081 max_conns=64 fail_timeout=0 max_fails=0;
 	keepalive 16;
+	#queue 100 timeout=10s; # requires nginx plus
 }
 
 upstream refacto_backend_ws {
 	hash $request_uri consistent;
 
-	server 127.0.0.1:4080 max_conns=1024;
-	server 127.0.0.1:4081 max_conns=1024;
+	server 127.0.0.1:4080 max_conns=1024 fail_timeout=0 max_fails=0;
+	server 127.0.0.1:4081 max_conns=1024 fail_timeout=0 max_fails=0;
 }
 
 map $http_upgrade $connection_upgrade {
@@ -35,6 +36,8 @@ server {
 	merge_slashes off;
 
 	location / {
+		limit_req zone=background burst=5000;
+
 		proxy_pass http://refacto_backend;
 		include /etc/nginx/sites-available/proxy-common.inc;
 		proxy_set_header Connection "";
