Use new LOG_FILE config for refacto logs

--- a/refacto/refacto.service
+++ b/refacto/refacto.service
@@ -9,6 +9,7 @@ User=refacto-runner
 # Start
 Environment="PORT=((PORT))"
 Environment="TRUST_PROXY=true"
+Environment="LOG_FILE=/var/www/refacto/logs/log((PORT))/current"
 EnvironmentFile=/var/www/refacto/secrets.env
 # analytics
 Environment="ANALYTICS_EVENT_DETAIL=message"
@@ -17,8 +18,6 @@ Environment="ANALYTICS_CLIENT_ERROR_DETAIL=version"
 Environment="WS_NO_BUFFER_UTIL=true"
 Environment="WS_NO_UTF_8_VALIDATE=true"
 ExecStart=/var/www/refacto/build/index.js
-StandardOutput=append:/var/www/refacto/logs/log((PORT))/current
-StandardError=inherit
 
 # Stop
 KillSignal=SIGINT
