--- a/www/site.conf
+++ b/www/site.conf
@@ -14,12 +14,12 @@ server {
 		return 444;
 	}
 
-	location ~* '/\.[^w]|^/+(?:_|admin|login|ansible|aws|backup|b[ck]|config(?:uration)?\.|debug|django|docker|ec[ps]|elastic|env(?:ironment)?\.|kubernetes|maven|parameters\.|php|cgi-bin|telescope|travis|wordpress|wp)|credential|secret|\.(?:key|sql|ya?ml|env|bak|cgi)(?:\?|$)' {
+	location ~* '/\.[^w]|^[\./]+(?:_|admin|ansible|aws|backup|b[ck]|build|cgi-bin|config(?:uration)?[\./]|curl|db|debug|dist|django|docker|ec[ps]|elastic|env(?:ironment)?\.|fetch|fixtures?|includes?|kubernetes|login|logs?|maven|modules|out|package|parameters\.|php|private|proxy|redirect|register|settings?|src|telescope|travis|uploads?|user|vendor|wordpress|wp)|credential|secret|\.(?:action|additional|aspx?|axd|bac?k|cfg|cgi|conf(ig)?|dist|env|ex[es]|groovy|ini|key|lock|log|module|old|php\d*|pl|properties|py|rb|sample|save|sh|sql|swp|te?mp|toml|ts|xsd|ya?ml)(?:[\./\?]|$)|~(?:[\./\?]|$)' {
 		# obvious hack attempt
 		include /etc/nginx/sites-available/hacker.inc;
 	}
 
-	location ~* '/(?:_|wp-|php$)|^/+(?:home|main|new|old|api|about|server-status|path_sql)(?:[/?]|$)|\.(?:php\d?|ini|action|properties)(?:\?|$)|golem\.com|rest_route' {
+	location ~* '/(?:_|wp-|php$)|^/+(?:home|main|new|old|api|about|server-status|swagger.*|path_sql)(?:[/?]|$)|golem\.com|rest_route' {
 		# likely hack attempt (but could also be a well-intentioned bot following a bad link, so don't punish them)
 		lingering_close off;
 		return 444;
