Use $uri instead of $request_uri for load balancer hashing to hash on normalised paths

--- a/refacto/site.conf
+++ b/refacto/site.conf
@@ -6,7 +6,7 @@ upstream refacto_backend {
 }
 
 upstream refacto_backend_ws {
-	hash $request_uri consistent;
+	hash $uri consistent;
 
 	server 127.0.0.1:4080 max_conns=1024 fail_timeout=0 max_fails=0;
 	server 127.0.0.1:4081 max_conns=1024 fail_timeout=0 max_fails=0;
