Use more generic name for retro target since it serves both HTTP and WebSocket requests

--- a/refacto/site.conf
+++ b/refacto/site.conf
@@ -5,7 +5,7 @@ upstream refacto_backend {
 	#queue 100 timeout=10s; # requires nginx plus
 }
 
-upstream refacto_backend_ws {
+upstream refacto_backend_retro {
 	hash $uri consistent;
 
 	server 127.0.0.1:4080 max_conns=1024 fail_timeout=0 max_fails=0;
@@ -60,7 +60,7 @@ server {
 	}
 
 	location /api/retros {
-		proxy_pass http://refacto_backend_ws;
+		proxy_pass http://refacto_backend_retro;
 		include /etc/nginx/sites-available/proxy-common.inc;
 		proxy_set_header Upgrade $http_upgrade;
 		proxy_set_header Connection $connection_upgrade;
